--- a/src/CSS/OurMission.css
+++ b/src/CSS/OurMission.css
@@ -31,3 +31,27 @@
     transform: none;
     visibility: visible;
   }
+
+  /* MOBILE SCREEN CSS  */
+
+@media screen and (max-device-width: 800px) {
+
+    .OurMissionImage {
+        height: 200vh;
+        width: 280%
+    }
+
+    #OurMissionTitle {
+        margin-right: 5rem;
+        font-size: 5rem;
+    }
+
+    .OurMissionDescription {
+        margin-left: 5rem;
+    }
+
+    #OurMissionParagraph {
+        font-size: 2.2rem;
+    }
+
+}
