--- a/src/CSS/MenuDisplay.css
+++ b/src/CSS/MenuDisplay.css
@@ -51,6 +51,7 @@
 
 
 @media screen and (max-device-width: 800px) {
+
 .menuFirst {
       display:inline-block;
 
@@ -61,16 +62,18 @@
     display: inline-block;
     position: absolute;
     font-size: 3rem;
+    margin-left: 1rem;
 }
 
 .menuImages {
-    width: 140vh;
-    height: 200vh;
+    margin-left: -4.5rem;
+    width: 115vh;
+    height: 190vh;
     padding-bottom: 2rem;
 }
 
-#firstTitle {   margin: -165rem 0 0 13rem;  }
-#secondTitle {  margin: 65rem 0 0 13rem; }
-#thirdTitle {   margin: 65rem 0 0 13rem; }
+#firstTitle {   margin: -158rem 0 0 9rem;  }
+#secondTitle {  margin: 65rem 0 0 9rem; }
+#thirdTitle {   margin: 50rem 0 0 9rem; }
 
 }
