--- a/src/CSS/BeerDisplay.css
+++ b/src/CSS/BeerDisplay.css
@@ -43,3 +43,12 @@
     }
 
 }
+
+@media screen and (min-width:1400px) and (max-width:2000px) {
+    
+    .beerDisplay { 
+        grid-template-columns: 25% 25% 25% 25%;
+        margin-right: 15rem;
+    }
+
+}
