--- a/src/CSS/Intro.css
+++ b/src/CSS/Intro.css
@@ -66,8 +66,13 @@ body {
   }
 }
 
+@media screen and (min-width:1300px) and (max-width:2000px) {
+  body {
+    background-size: 140rem;
+    overflow-x: hidden;;
+  }
 
-
-
-
-/* @media screen and (min-width:1300px) and (max-width:1600px) { */
+  #fourth {
+    padding-bottom: 20rem;
+  }
+}
